--- a/views/course/profile.pug
+++ b/views/course/profile.pug
@@ -1,9 +1,10 @@
-extends .//layout
+extends ../layout
 
 block content
     h3= course.name
-
+    a(href=`/courses/edit/${course.id}`) Edit Course
+    a(href=`/courses/delete/${course.id}`) Delete Course
     div
         p Instructor: #{course.instructor_name}
         p Department: #{course.department}
-        p= cousre.description
+        p= course.description
