--- a/views/student/profile.pug
+++ b/views/student/profile.pug
@@ -1,19 +1,22 @@
 extends ../layout
 
 block content
-
     a(href=`/students/edit/${student.id}`) Edit Student
     a(href=`/students/delete/${student.id}`) Delete Student
     div
         p Name: #{student.first_name} #{student.last_name}
         p Grade Level: #{student.grade_level}
-
-        h4 Student Courses
+    h4 Student Courses
+    if availableCourses.length>0
         form(action=`/students/${student.id}/enroll/` method='post')
             select(name='course' id='course' autocomplete=off)
                 each course in availableCourses
                     option(value=course.id) #{course.name}
-            button.button(type='submit') Enroll
+            button.button.primary(type='submit') Enroll
+    else
+        p No remaining courses are available to enroll in.
+    h4 Enrolled Courses
+    if student.courses.length>0
         table
             thead
                 tr
@@ -30,3 +33,5 @@ block content
                         td
                             a(href=`/courses/profile/${course.id}`) View Course
                             a(href=`/students/${student.id}/removeCourse/${course.id}`) Remove Course
+    else
+        p Student had not enrolled in any courses
